# calc

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  calc.c  calc.h  color.h  compiler.h  configure  configure.ac  optimizations.h  platform.h
libs/ncurses/share/terminfo/a/: abm85  abm85e  abm85h  adm36  alt2  altos-5  ampex210
libs/ncurses/share/terminfo/b/: basic4
libs/ncurses/share/terminfo/c/: cit101e  cit101e-132  cit101e-n  cit101e-n132  crt
libs/ncurses/share/terminfo/d/: ddr3180  dec-vt220  dec-vt400
libs/ncurses/share/terminfo/e/: emu-220
libs/ncurses/share/terminfo/g/: go140  go140w  go225
libs/ncurses/share/terminfo/h/: h29a-kc-bc  h29a-nkc-uc  hazel  hp2392  hp2645a  hp300h  hp700-wy  hp9845  hp98550  hpex  hpsub
libs/ncurses/share/terminfo/k/: kt7
libs/ncurses/share/terminfo/m/: mt4520-rv
libs/ncurses/share/terminfo/n/: ncsa  ncsa-m  ncsa-m-ns  ncsa-ns  ncsa-vt220  netbsd6  news-29  news-29-euc  news-29-sjis  news-33  news-33-euc  news-33-sjis  news-42  news-42-euc  news-42-sjis  news-old-unk  news-unk  news28  news29  news31  news31-a  newscbm-o  nwp-517-w  nwp512-o  nwp514  nwp514-a  nwp517
libs/ncurses/share/terminfo/o/: oabm85h  opus3n1+  otek4115
libs/ncurses/share/terminfo/p/: pcmw  pcvt25  pcvt25-color  pcvt25w  pcvt28  pcvt28w  pcvt35  pcvt35w  pcvt40  pcvt40w  pcvt43  pcvt43w  pcvt50  pcvt50w  pcvtXX
libs/ncurses/share/terminfo/t/: ti916-132  ti916-220-7  ti916-220-8  ti916-8-132  tvi9065  tvi910  tvi910+  tvi912b  tvi912b-2p  tvi912b-mc  tvi912b-p-vb  tvi912b-unk  tvi912b-unk-2p  tvi912b-vb  tvi912b-vb-mc  tvi912c-2p-mc  tvi912c-p  tvi912c-p-2p  tvi912c-vb-unk  tvi912cc  tvi914  tvi920b-2p  tvi920b-p  tvi920b-unk-2p  tvi920b-vb  tvi920b-vb-p  tvi920b-vb-unk  tvi920c  tvi920c-2p-mc  tvi920c-mc  tvi920c-mc-vb  tvi920c-p-2p  tvi920c-unk  tvi921  tvi924  tvi92B  tvi92D  tvipt
libs/ncurses/share/terminfo/u/: ultima2  uniterm49  uts30
libs/ncurses/share/terminfo/v/: v200-nam  versaterm  vt200-old  vt220  vt220-8bit  vt220-js  vt220-w  vt220d  vt300  vt300-nam  vt300-w  vt320-k311  vt320-w-nam  vt320nam  vt330  vt420  vt420f  vt420pc  vt420pcdos  vt510  vt510pc  vt510pcdos  vt520  vt520ansi  vt525
libs/ncurses/share/terminfo/w/: wsvt25  wsvt25m
libs/ncurses/share/terminfo/x/: x68k
libs/readline/lib/: libhistory.old  libreadline.old
libs/readline/lib/pkgconfig/: readline.pc
src/: calc.c  color.h  parse.h  rpn.c
src/.deps/: rpn.Po
(+4 files in other folders)
